--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="square"></div>
+  <div class="container">
+    <div id="square-big" class="square"></div>
+    <div id="square-small" class="square"></div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
